version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Table/ImportSettingsBase.rst.txt
.. vale off



:class:`ImportSettingsBase`
===========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Table.ImportSettingsBase

   Bases: :py:obj:`object`


   
   A base class for Table import settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ImportSettingsBase

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~PathType`
            - Gets or sets the type of URI provided for Table import.







Property detail
---------------
.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Table.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: PathType
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.Common.PathType]


   
   Gets or sets the type of URI provided for Table import.
   Default: 
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on